#217 refactor sonar issues